inku/xode-server/profiles/md/k8s-code-server-8080.yaml
apiVersion: v1
kind: Pod
metadata:
  name: xidunku-xode-server
  labels:
    app: xidunku-xode-server
spec:
  terminationGracePeriodSeconds: 0
  volumes:
    - name: hostdir
      hostPath:
        path: /tmp
        type: Directory
  containers:
    - name: code-server
      image: localhost:32000/xidunku-xode-server-md
      ports:
        - name: web
          containerPort: 8080
      command:
        - /usr/bin/dumb-init
        - --
      args:
        - /bin/bash
        - -c
        - |
          code-server --host 0.0.0.0 --port 8080
          #
      volumeMounts:
        - name: hostdir
          mountPath: /home/coder/project
      resources:
        limits:
          memory: "512Mi"
          cpu: "500m"
