inku/xode-server/profiles/md/k8s-code-server-md-all-in-one.yaml
apiVersion: v1
kind: Pod
metadata:
  name: xidunku-xode-server-md
spec:
  terminationGracePeriodSeconds: 0
  volumes:
    - name: hostdir
      hostPath:
        path: /tmp
        type: Directory
  containers:
    - name: code-server
      image: localhost:32000/xidunku-xode-server-md
      ports:
        - name: web
          containerPort: 8443
        - name: md
          containerPort: 3000
        - name: md-websocket
          containerPort: 13001
      command:
        - /usr/bin/dumb-init
        - --
      args:
        - /bin/bash
        - -c
        - |
          code-server --host 0.0.0.0 --port 8443 --cert &
          pushd $MDBOOK_ROOT
          mdbook serve -n 0.0.0.0 --port 3000 --websocket-port 13001 --websocket-hostname 127.0.0.1
          #
      volumeMounts:
        - name: hostdir
          mountPath: /home/coder/project
      resources:
        limits:
          memory: "512Mi"
          cpu: "500m"
